--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: linux-libre
 Section: utils
 Priority: optional
 Maintainer: Ali Riza KESKIN <parduscix@yandex.ru>
-Build-Depends: make, dwarves, flex, libssl-dev, bison, bc, zstd, libelf-dev, libncurses-dev
+Build-Depends: make, dwarves, flex, libssl-dev, bison, bc, zstd, libelf-dev, libncurses-dev, wget, curl, kmod, cpio
 Standards-Version: 4.3.0
 Homepage: https://example.org
 
